--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,12 @@
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #f2f2f2;
+}
+
+section {
+  background-color: #fff;
+}
+
+h1 {
+  border-bottom: solid, 2px, #000;
 }
