--- a/css/main.css
+++ b/css/main.css
@@ -8,5 +8,24 @@ section {
 }
 
 h1 {
-  border-bottom: solid, 2px, #000;
+  border-bottom: solid 1px #000;
+}
+
+@media only screen and (min-width: 60em) {
+ .name {
+   padding-right: .5rem;
+ }
+
+ .age {
+   padding-right: .5rem;
+ }
+
+ .email {
+   padding-right: .5rem;
+ }
+
+ .physical {
+   padding-right: .5rem;
+ }
+
 }
